--- a/.env.exemple
+++ b/.env.exemple
@@ -1,6 +1,46 @@
+#[APP CONFIGURATION]
 APP_NAME="STS Framework"
 APP_VERSION="1.0.3"
 APP_DESCRIPTION="A simple PHP framework"
 APP_KEYWORDS="PHP, framework, STS"
 APP_AUTHOR="STS"
 APP_ENV=development
+APP_DEBUG=false
+APP_URL=http://localhost
+APP_KEY=
+
+
+#[DATABASE]
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=my_database
+DB_USERNAME=root
+DB_PASSWORD=
+DB_SOCKET=
+
+#[REDIS]
+REDIS_CLIENT=phpredis
+REDIS_CLUSTER=redis
+REDIS_PREFIX=sts_database_
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_CACHE_DB=1
+
+
+#[CACHES]
+CACHE_DRIVER=file
+MEMCACHED_HOST=127.0.0.1
+MEMCACHED_PORT=11211
+CACHE_TTL=60
+CACHE_PREFIX=sts_cache
+
+#[THEMES]
+THEME_NAME=default
+THEME_CACHE_ENABLED=true
+THEME_CACHE_TTL=3600
+THEME_CUSTOM_CSS=true
+THEME_CUSTOM_JS=true
+THEME_DARK_MODE=false
